cleaned up word completion and spellcheck